--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,27 @@
-name: Run tests
+name: Java CI with Gradle
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build and test with Gradle
-        run: ./gradlew test
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Start SUT
+        run: |
+          java -jar ./artifacts/app-mbank.jar &
+          sleep 15  # ждём пока приложение полностью запустится
+
+      - name: Run tests with Gradle
+        run: ./gradlew test --info -Dselenide.headless=true
