--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,24 @@
-name: Java CI with Gradle
-
-on: [push, pull_request]
-
+name: CI
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
+      - uses: actions/checkout@v3
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Start SUT in test mode
-        run: |
-          java -jar ./artifacts/app-sut.jar --server.port=8080 --spring.profiles.active=test &
-          sleep 5
-
-      - name: Wait for SUT to start
-        run: |
-          until curl -s http://localhost:8080; do
-            sleep 1
-          done
-
-      - name: Run tests with Gradle
-        run: ./gradlew test --info -Dselenide.headless=true
-
-      - name: Stop SUT
-        if: always()
-        run: pkill -f 'java -jar ./artifacts/app-sut.jar'
+      - name: Build with Gradle
+        run: ./gradlew clean build
+      - name: Run SUT
+-        run: java -jar app-deadline.jar --spring.profiles.active=test --server.port=8080 &
++        run: java -jar app-ibank.jar -Pprofile=test &
+                - name: Run UI tests
+                run: |
+                  cd src/test/java
+                  mvn test
