--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,11 @@ name: Autotests
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   test:
@@ -17,24 +19,24 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: 17
 
-      - name: Grant execute permission for Gradle
+      - name: Grant execute permission to Gradle
         run: chmod +x gradlew
 
-      - name: Start app-ibank in test mode
-        run: java -Dspring.datasource.url=jdbc:mysql://localhost:3306/app -Dspring.datasource.username=app -Dspring.datasource.password=pass -jar app-ibank.jar -P:test &
+      - name: Start SUT in test mode
+        run: java -jar artifacts/app-ibank.jar -P:profile=test &
 
-      - name: Wait for app to start
-        run: sleep 20
+      - name: Wait for application to start
+        run: sleep 15
 
-      - name: Run tests in headless mode
-        run: ./gradlew clean test -Dselenide.headless=true
+      - name: Run UI tests
+        run: ./gradlew clean test --info -Dselenide.headless=true
 
       - name: Archive test report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: report
+          name: test-report
           path: build/reports/tests/test
