--- a/build.gradle
+++ b/build.gradle
@@ -2,42 +2,35 @@ plugins {
     id 'java'
 }
 
-def testProfile = project.hasProperty('profile') ? project.property('profile') : 'default'
+group 'ru.netology'
+version '1.0-SNAPSHOT'
 
-tasks.named('bootRun') {
-    if (testProfile == 'test') {
-        systemProperty 'spring.profiles.active', 'test'
-    }
+java {
+    sourceCompatibility = 11
 }
-
-group = 'ru.netology'
-version = '1.0-SNAPSHOT'
-
-sourceCompatibility = 11
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'commons-io:commons-io:2.11.0'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
+    // UI-тесты на Selenide
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-    testImplementation 'com.codeborne:selenide:6.19.1'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testImplementation 'io.rest-assured:rest-assured:5.5.0'
-    testImplementation 'com.google.code.gson:gson:2.13.0'
-    testCompileOnly 'org.projectlombok:lombok:1.18.36'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
+    testImplementation 'com.codeborne:selenide:6.12.3'
     testImplementation 'org.slf4j:slf4j-simple:2.0.3'
+
+    // JDBC-драйвер для чтения кодов из БД
+    testImplementation 'mysql:mysql-connector-java:8.0.32'
+
+    // Lombok (если используется)
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
 }
 
 test {
     useJUnitPlatform()
-    systemProperty 'selenide.headless', 'true'
-    systemProperty 'chromeoptions.args', '--remote-allow-origins=*'
-    testLogging {
-        events "passed", "skipped", "failed"
-    }
+    // Управление headless режимом через -Dselenide.headless
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless', 'true')
 }
