--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
     testImplementation 'com.codeborne:selenide:6.19.1'
     testImplementation 'org.slf4j:slf4j-simple:2.0.3'
-
     compileOnly("org.projectlombok:lombok:1.18.38")
     annotationProcessor("org.projectlombok:lombok:1.18.38")
-
+    testImplementation 'io.rest-assured:rest-assured:5.4.0'
+    testImplementation 'com.google.code.gson:gson:2.10.1'
     testCompileOnly("org.projectlombok:lombok:1.18.38")
     testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
 }
