--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,32 +1,27 @@
-name: Autotests
+name: Java CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: 17
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
 
-      - name: Grant execute permission to Gradle
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Start SUT in test mode
-        run: java -jar artifacts/app-ibank.jar -P:profile=test &
+        run: |
+          java -jar ./artifacts/app-ibank.jar -P:profile=test &
+          sleep 10 # Даем время на запуск
 
-      - name: Run UI tests
-        run: ./gradlew clean test --info -Dselenide.headless=true
+      - name: Run tests
+        run: ./gradlew test
