--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,10 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:1.18.38")
     testImplementation 'io.rest-assured:rest-assured:5.4.0'
     testImplementation 'com.google.code.gson:gson:2.10.1'
-    testCompileOnly("org.projectlombok:lombok:1.18.38")
-    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 test {
