--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,5 +1,4 @@
 name: Java CI
-
 on: [push]
 
 jobs:
@@ -20,8 +19,7 @@ jobs:
 
       - name: Start SUT in test mode
         run: |
-          java -jar ./artifacts/app-ibank.jar -P:profile=test &
-          sleep 10 # Даем время на запуск
+          java -jar ./artifacts/app-ibank.jar -P:profile-test &
 
       - name: Run tests
-        run: ./gradlew test
+        run: ./gradlew test --info -Dselenide.headless=true
