--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Start SUT in test mode
         run: |
-          java -jar ./artifacts/app-ibank.jar -P:profile-test &
+          java -jar ./artifacts/app-ibank.jar --spring.profiles.active=test &
 
       - name: Run tests
         run: ./gradlew test --info -Dselenide.headless=true
