--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,14 @@ dependencies {
     testImplementation 'org.slf4j:slf4j-simple:2.0.3'
     compileOnly("org.projectlombok:lombok:1.18.38")
     annotationProcessor("org.projectlombok:lombok:1.18.38")
-    testImplementation 'io.rest-assured:rest-assured:5.4.0'
+    testImplementation 'io.rest-assured:rest-assured:5.3.1'
     testImplementation 'com.google.code.gson:gson:2.10.1'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testImplementation 'io.rest-assured:rest-assured:4.5.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
